[gd_scene load_steps=5 format=3 uid="uid://b41usv0pclnw1"]

[ext_resource type="FontFile" uid="uid://ulu7kgqxb12r" path="res://Assets/Fonts/LoSumires-2X8l.ttf" id="1_83y2u"]
[ext_resource type="Script" path="res://Scripts/settings.gd" id="1_gy342"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_q8xwd"]
bg_color = Color(0.0509804, 0.0509804, 0.0509804, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.603922, 0.305882, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_d68d4"]
line_spacing = 1.0
font_size = 30
font_color = Color(0, 0, 0, 1)
outline_size = 3
outline_color = Color(0.603922, 0.305882, 0, 1)

[node name="Settings" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_gy342")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="Panel" type="Panel" parent="MarginContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_q8xwd")

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 2
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 2
theme_override_constants/margin_bottom = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/Panel/MarginContainer"]
layout_mode = 2

[node name="SettingsLabel" type="Label" parent="MarginContainer/Panel/MarginContainer/VBoxContainer"]
texture_filter = 1
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("1_83y2u")
theme_override_font_sizes/font_size = 30
text = "SETTINGS"
label_settings = SubResource("LabelSettings_d68d4")
horizontal_alignment = 1

[node name="MasterVolume" type="Label" parent="MarginContainer/Panel/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("1_83y2u")
text = "Master Volume: 50"
horizontal_alignment = 1

[node name="MasterSlider" type="HSlider" parent="MarginContainer/Panel/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
value = 50.0
tick_count = 10
ticks_on_borders = true

[node name="MusicVolume" type="Label" parent="MarginContainer/Panel/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("1_83y2u")
text = "Music Volume: 50"
horizontal_alignment = 1

[node name="MusicSlider" type="HSlider" parent="MarginContainer/Panel/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
value = 50.0
tick_count = 10
ticks_on_borders = true

[node name="SoundEffectsVolume" type="Label" parent="MarginContainer/Panel/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("1_83y2u")
text = "Sound Effects Volume: 50"
horizontal_alignment = 1

[node name="SoundEffectsSlider" type="HSlider" parent="MarginContainer/Panel/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
value = 50.0
tick_count = 10
ticks_on_borders = true

[connection signal="value_changed" from="MarginContainer/Panel/MarginContainer/VBoxContainer/MasterSlider" to="." method="_on_master_slider_value_changed"]
[connection signal="value_changed" from="MarginContainer/Panel/MarginContainer/VBoxContainer/MusicSlider" to="." method="_on_music_slider_value_changed"]
[connection signal="value_changed" from="MarginContainer/Panel/MarginContainer/VBoxContainer/SoundEffectsSlider" to="." method="_on_sound_effects_slider_value_changed"]
